# ADAS_L2_AEB_Fusion

./: README.md
docs/: safety_goals.md
install/: local_setup.sh  setup.sh
install/perception_fusion/lib/perception_fusion/: decision_node
install/perception_fusion/share/perception_fusion/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sensor_mock/lib/sensor_mock/: camera_node.py  radar_node
install/sensor_mock/share/ament_index/resource_index/parent_prefix_path/: sensor_mock
install/sensor_mock/share/sensor_mock/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sensor_mock/share/sensor_mock/cmake/: sensor_mockConfig.cmake
log/: latest_build
recordings/rosbag2_2026_03_01-12_13_06/: metadata.yaml
recordings/rosbag2_2026_03_01-12_24_27/: metadata.yaml  rosbag2_2026_03_01-12_24_27_0.db3
src/perception_fusion/: CMakeLists.txt
src/perception_fusion/include/perception_fusion/: kalman_filter.hpp
src/perception_fusion/src/: decision_node.cpp  fusion_node.cpp  kalman_filter.cpp
src/sensor_mock/: CMakeLists.txt
src/sensor_mock/src/: radar_node.cpp
